[package]
name = "test_docs"
version = "0.1.0"
authors = ["Tom Gowan <tomrgowan@gmail.com>"]
edition = "2018"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
skeptic = "0.13"
regex = "1"

[dev-dependencies]
skeptic = "0.13"
hdk = { git = "https://github.com/holochain/holochain-rust", tag = "0.0.25-alpha1" }
hdk-proc-macros = { git = "https://github.com/holochain/holochain-rust", tag = "0.0.25-alpha1" }
holochain_wasm_utils = { git = "https://github.com/holochain/holochain-rust", tag = "0.0.25-alpha1" }
holochain_json_derive = { version = "0.0.1-alpha2" }
serde = "=1.0.89"
serde_json = { version = "=1.0.39", features = ["preserve_order"] }
serde_derive = "=1.0.89"
